fix: set overflow to hidden to prevent scrolling

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: "Monserrat", sans-serif;
+  overflow: hidden;
 }
 
 /* Heading */
